--- a/Thesis/Thesis.csproj
+++ b/Thesis/Thesis.csproj
@@ -171,7 +171,7 @@
     <Compile Include="Ipsum\Destination.cs" />
     <Compile Include="Ipsum\IpsumClient.cs" />
     <Compile Include="Models\AccountModels.cs" />
-    <Compile Include="Models\Sensor.cs" />
+    <Compile Include="Models\NetworkModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
