ipsum updates + start on abstraction networks

--- a/Thesis/Thesis.csproj
+++ b/Thesis/Thesis.csproj
@@ -162,6 +162,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SensorController.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
@@ -303,6 +304,8 @@
     <Content Include="Views\Sensor\Edit.cshtml" />
     <Content Include="Views\Sensor\Create.cshtml" />
     <Content Include="Views\Sensor\Delete.cshtml" />
+    <Content Include="Views\Admin\CreateNetwork.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
